Added new tutorial sections, reworked old